--- a/currentlylisted.html
+++ b/currentlylisted.html
@@ -544,7 +544,7 @@
                               if (answer){
                                 courrier.destroy({
                                   success: function(myObject) {
-                                    
+                                    location.reload()
                                     // The object was deleted from the Parse Cloud.
                                   },
                                   error: function(myObject, error) {
