--- a/sell.html
+++ b/sell.html
@@ -440,9 +440,8 @@
 		      <p id="openStore">
 		        <a class="btn btn-primary btn-lg" href="sellItem.html">open your store</a>
 		      </p>
-          <!--<img src="http://placehold.it/900x400" class="thumbnail img-responsive" alt="start here video" style="margin-left:auto; margin-right:auto">-->
-          <video width="320" height="240" controls>
-            <source src="howToSell.mp4" type="video/mp4">
+          <video width="900" height="400" controls>
+            <source src="files/howToSell.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
           <h3>want to sell some shoes? check this out first</h3>
