--- a/team.html
+++ b/team.html
@@ -456,10 +456,10 @@
         <div class="row team-bios-row">
           <div class="col-sm-6 col-md-4 team-page-bios">
             <div>
-              <img class="img-thumbnail img-responsive center-block" src="images/team/IMG_3654.jpeg" alt="...">
+              <img class="img-thumbnail img-responsive center-block" src="images/team/clareEllis.png" alt="...">
               <div class="caption text-center">
-                <h4 class="blue">Austen Keene<br />
-                <span class="text-muted">technical director</span></h4>
+                <h4 class="blue">Clare Ellis<br />
+                <span class="text-muted">general manager</span></h4>
                 <hr class="team-page-thumbs" />
                 <p>Austen first ran into programming when he found an old HTML book in 6th grade. He proceeded to teach himself JavaScript and CSS, working in tech shops and on personal projects. He's a top contributor for Appium, an open source mobile testing application, and primarily does backend development. When he's not programming he is fencing, playing video games, or binge watching tv.</p>
               </div><!-- /caption -->
