--- a/popular.html
+++ b/popular.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/font-awesome.min.css">
             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
       <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
+      <script type="text/javascript" src="photoGeneration.js"></script>
 
     <title>Popular</title>
 
@@ -668,7 +669,7 @@ Parse.initialize("tl9Ud0lSR5yZp7Fh30tZSgfCJrGEURKe3PMWHGCn", "zvZ345M8m9y136I9fc
                 finalObj += "<div class='thumbnail'>\n"
                 finalObj += "<a href='buy.html?item=" + item.id + "'>"
                 finalObj += "<div style='width:250; height:200px; overflow:hidden; text-align: center;'>\n"
-                finalObj += "<img src='" + item.get("image") + "' style='position:relative; left:100%; margin-left:-200%;' height='200'>\n"                
+                finalObj += "<img src='" + lowResImageLandscape(item.get("image")) + "' style='position:relative; left:100%; margin-left:-200%;' height='200'>\n"                
                 finalObj += "</div>"
                 finalObj += "</a>\n"
                 finalObj += "<div class='caption'>"
