Mandatory log-in on password-protected pages

--- a/popular.html
+++ b/popular.html
@@ -500,10 +500,9 @@
             <label class="control-label" for="select03">sort by condition:</label>
             <select id="condition" class="form-control">
               <option>condition</option>
-              <option>new</option>
-              <option>slightly used</option>
-              <option>used</option>
-              <option>very used</option>
+              <option>new with box</option>
+              <option>new without box</option>
+              <option>preowned</option>
             </select>
           </div><!-- /form-group -->
 
