--- a/admin.html
+++ b/admin.html
@@ -18,8 +18,8 @@
 		
 		<script>
 			Parse.initialize("tl9Ud0lSR5yZp7Fh30tZSgfCJrGEURKe3PMWHGCn", "zvZ345M8m9y136I9fcDtMMG1kP732SPItGFnj8zr");
-				var courrier = Parse.Object.extend("payLogs");
-				var mailbox = new Parse.Query(courrier);
+				var shoe = Parse.Object.extend("payLogs");
+				var mailbox = new Parse.Query(shoe);
 				mailbox.exists("amount");
 				mailbox.descending("createdAt");
 				mailbox.find({
