--- a/buy.html
+++ b/buy.html
@@ -1035,7 +1035,7 @@
 
 <script>       
       var populateSecond = function(user,stuffId) {
-        var delivery = new Parse.Query("courrier");
+        var delivery = new Parse.Query("shoe");
         delivery.exists("item");
         delivery.limit(4);
         delivery.equalTo("user", user);
@@ -1077,8 +1077,8 @@ return queryItem
 }
   var queryItem = decodeStuffz();
      Parse.initialize("tl9Ud0lSR5yZp7Fh30tZSgfCJrGEURKe3PMWHGCn", "zvZ345M8m9y136I9fcDtMMG1kP732SPItGFnj8zr");  
-        var courrier = Parse.Object.extend("courrier");
-        var mailbox = new Parse.Query(courrier);
+        var shoe = Parse.Object.extend("shoe");
+        var mailbox = new Parse.Query(shoe);
         mailbox.get(queryItem, {
           success: function(woot) {
             document.getElementById("itemName").innerHTML = woot.get("item");
@@ -1324,7 +1324,7 @@ return queryItem
         });
 
         var populateSecond = function(user,stuffId) {
-        var delivery = new Parse.Query("courrier");
+        var delivery = new Parse.Query("shoe");
         delivery.exists("item");
         delivery.limit(4);
         delivery.equalTo("user", user);
