--- a/popular.html
+++ b/popular.html
@@ -637,8 +637,8 @@ if (first > 1) {
 }
 
 Parse.initialize("tl9Ud0lSR5yZp7Fh30tZSgfCJrGEURKe3PMWHGCn", "zvZ345M8m9y136I9fcDtMMG1kP732SPItGFnj8zr");
-          var courrier = Parse.Object.extend("courrier");
-          var mailbox = new Parse.Query(courrier);
+          var shoe = Parse.Object.extend("shoe");
+          var mailbox = new Parse.Query(shoe);
           mailbox.exists("item");
           if (querySize !== undefined) mailbox.equalTo("size", querySize);
           if (queryGender !== undefined) mailbox.equalTo("gender", queryGender);
