--- a/purchases.html
+++ b/purchases.html
@@ -487,8 +487,8 @@
                 <script>
                   Parse.initialize("tl9Ud0lSR5yZp7Fh30tZSgfCJrGEURKe3PMWHGCn", "zvZ345M8m9y136I9fcDtMMG1kP732SPItGFnj8zr");
                   dashUsername.innerHTML=Parse.User.current().get("username");
-                  var Courrier = Parse.Object.extend("courrier");
-                  var query = new Parse.Query(Courrier);
+                  var Shoe = Parse.Object.extend("shoe");
+                  var query = new Parse.Query(Shoe);
                   query.equalTo("userNameStuff", Parse.User.current().get("username"));
                   query.find({
                     success: function(results) {
