--- a/buy.html
+++ b/buy.html
@@ -12,6 +12,9 @@
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="photoGeneration.js"></script>
+    <link rel="stylesheet" type="text/css" href="dist/css/picedit.min.css" />
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script type="text/javascript" src="dist/js/picedit.min.js"></script>
 
     <title>Buy Shoes</title>
 
@@ -956,6 +959,9 @@
                     commentFinalObj += "<p><font color='#808080'>at "+results[i].createdAt+", <strong>"+results[i].get("user")+"</strong> said:</font> </p>"
                     commentFinalObj += "<p>"+results[i].get("comment")+"</p>"
                     //commentFinalObj += "<div>"
+                    if(results[i].get("user")==currentUser.get("username")){
+                      commentFinalObj
+                    }
                     commentFinalObj += "</div>"
                     //alert(object.id + ' - ' + object.get('playerName'));
                   }
