--- a/sellItem.html
+++ b/sellItem.html
@@ -8,9 +8,11 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/picedit.css" />
+    <script type="text/javascript" src="js/picedit.js"></script>
 
     <title>HeatSwap</title>
 
@@ -573,27 +575,34 @@
                 </div>
               </div>
             </div>
+            
             <div class="form-group">
               <label for="uploadImages" class="col-sm-2 col-sm-offset-1 control-label">upload images</label>
-              <div class="col-sm-8">
+              <div class="col-sm-8">             
                 <input type="hidden" name="image1URL" id="image1URL"/>
                 <form id="fileupload" name="fileupload" enctype="multipart/form-data" method="post">
                   <fieldset>
                     <div id="uploads">
-                    <input type="file" name="fileselect" id="fileselect1" accept="image/*" multiple></input>
+                      <input type="file" name="fileselect" id="fileselect1"></input>
                     </div>
                   </fieldset>
                 </form>
                 <div class="row" id="imagePreview1"> 
+                </div>
+                <div class="row" id="imagePreview2"> 
+                </div>
+                <div id="pickFeature" style="padding-top: 10px">
+                  <button id="deletePhoto" type="button" class="btn btn-default btn-sm red" style="border: 0px;" onClick="removePhoto()">
+                  <span class='glyphicon glyphicon-trash'></span>
+                  </button>
+                </div>
               </div>
-              <div class="row" id="imagePreview2"> 
-              </div>
-              <div id="pickFeature" style="padding-top: 10px">
-                <button id="deletePhoto" type="button" class="btn btn-default btn-sm red" style="border: 0px;" onClick="removePhoto()">
-                <span class='glyphicon glyphicon-trash'></span>
-                </button>
-              </div>
-              </div>
+
+              <script type="text/javascript">
+                $(function() {
+                  $('#fileselect1').picEdit();
+                });
+              </script>
 
               <script>
               var tempClicked="";
@@ -848,9 +857,9 @@
 
   </div><!-- /container -->
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>-->
 
     <script>
 
@@ -946,7 +955,6 @@
           }
 
         });
-
     var sellItem = function () {
       var currentUser = Parse.User.current();
       if(currentUser===""||currentUser===null){
@@ -1136,8 +1144,8 @@
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+ <!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>-->
     <script type="text/javascript">
       $(document).ready(function() {
         $('.carousel.slide').carousel();
