--- a/team.html
+++ b/team.html
@@ -454,28 +454,28 @@
         </div>
 
         <div class="row team-bios-row">
-          <div class="col-sm-6 col-md-4 team-page-bios">
-            <div>
-              <img class="img-thumbnail img-responsive center-block" src="images/team/clareEllis.png" alt="...">
-              <div class="caption text-center">
-                <h4 class="blue">Clare Ellis<br />
-                <span class="text-muted">general manager</span></h4>
-                <hr class="team-page-thumbs" />
-                <p>Austen first ran into programming when he found an old HTML book in 6th grade. He proceeded to teach himself JavaScript and CSS, working in tech shops and on personal projects. He's a top contributor for Appium, an open source mobile testing application, and primarily does backend development. When he's not programming he is fencing, playing video games, or binge watching tv.</p>
-              </div><!-- /caption -->
-            </div><!-- /thumbnail -->
-          </div><!-- /col-sm-6 -->
            <div class="col-sm-6 col-md-4 team-page-bios">
             <div>
               <img class="img-thumbnail img-responsive center-block" src="images/team/gordoozy.jpg" alt="...">
               <div class="caption text-center">
                 <h4 class="blue">Gordy Webb<br />
-                <span class="text-muted">promotions director</span></h4>
+                <span class="text-muted">promotions director and chief</span></h4>
                 <hr class="team-page-thumbs" />
                 <p>Gordy learned to appreciate sneakers when he was in elementary school and had to wear a uniform. What he wore on his feet became a creative outlet. He has traded in sneakers since sixth grade and started Calikix, a shoe customizing business, after 8th grade, with clients that include Royal Respect. When he’s not getting out the good word about HeatSwap, he produces music for Face Jam with fellow HeatSwapper Jon Anderson. What he looks for in a sneaker: authenticity.</p>
               </div><!-- /caption -->
             </div><!-- /thumbnail -->
           </div><!-- /col-sm-6 --> 
+          <div class="col-sm-6 col-md-4 team-page-bios">
+            <div>
+              <img class="img-thumbnail img-responsive center-block" height="252" src="images/team/jonny tsunami.jpg" alt="..." >
+              <div class="caption text-center">
+                <h4 class="blue">Jon Anderson<br />
+                <span class="text-muted">media associate</span></h4>
+                <hr class="team-page-thumbs" />
+                <p>Jon started his love affair with photography as a fourth grader when he borrowed his dad's camera to take pictures of his friends. Since then he has worked on the sets of Dawn of the Planet of the Apes, Pacific Rim, and The Internship. When he's not taking photos with he's most likely enjoying three Cool Ranch® Doritos® Locos Tacos at his local Taco Bell. Favorite shoe: Statue of Liberty Dunks</p>
+              </div><!-- /caption -->
+            </div><!-- /thumbnail -->
+          </div><!-- /col-sm-6 -->  
           <div class="col-sm-6 col-md-4 team-page-bios">
             <div>
               <img class="img-thumbnail img-responsive center-block" src="images/team/jodysphoto.jpeg" alt="...">
@@ -492,17 +492,6 @@
 
 
         <div class="row team-bios-row">
-          <div class="col-sm-6 col-md-4 team-page-bios">
-            <div>
-              <img class="img-thumbnail img-responsive center-block" height="252" src="images/team/jonny tsunami.jpg" alt="..." >
-              <div class="caption text-center">
-                <h4 class="blue">Jon Anderson<br />
-                <span class="text-muted">media associate</span></h4>
-                <hr class="team-page-thumbs" />
-                <p>Jon started his love affair with photography as a fourth grader when he borrowed his dad's camera to take pictures of his friends. Since then he has worked on the sets of Dawn of the Planet of the Apes, Pacific Rim, and The Internship. When he's not taking photos with he's most likely enjoying three Cool Ranch® Doritos® Locos Tacos at his local Taco Bell. Favorite shoe: Statue of Liberty Dunks</p>
-              </div><!-- /caption -->
-            </div><!-- /thumbnail -->
-          </div><!-- /col-sm-6 -->  
            <div class="col-sm-6 col-md-4 team-page-bios">
             <div>
               <img class="img-thumbnail img-responsive center-block" src="images/team/MaddyL.jpg" alt="...">
@@ -523,6 +512,17 @@
                 <hr class="team-page-thumbs" />
                 <p>Maddy N. designed her first website, an online store for her school, in 6th grade. Since then she has strayed from web design to focus on robotics. Heatswap has given her the chance to return to the world of web design. While not programming, Maddy enjoys running competitively and making Banh Mi sandwiches. Favorite pair of shoes: Nike Roshe Run
                 </p>
+              </div><!-- /caption -->
+            </div><!-- /thumbnail -->
+          </div><!-- /col-sm-6 --> 
+          <div class="col-sm-6 col-md-4 team-page-bios">
+            <div>
+              <img class="img-thumbnail img-responsive center-block" src="images/team/gordoozy.jpg" alt="...">
+              <div class="caption text-center">
+                <h4 class="blue">Kevin Hou<br />
+                <span class="text-muted">tech associate</span></h4>
+                <hr class="team-page-thumbs" />
+                <p>Gordy learned to appreciate sneakers when he was in elementary school and had to wear a uniform. What he wore on his feet became a creative outlet. He has traded in sneakers since sixth grade and started Calikix, a shoe customizing business, after 8th grade, with clients that include Royal Respect. When he’s not getting out the good word about HeatSwap, he produces music for Face Jam with fellow HeatSwapper Jon Anderson. What he looks for in a sneaker: authenticity.</p>
               </div><!-- /caption -->
             </div><!-- /thumbnail -->
           </div><!-- /col-sm-6 -->         
