--- a/team.html
+++ b/team.html
@@ -517,12 +517,12 @@
           </div><!-- /col-sm-6 --> 
           <div class="col-sm-6 col-md-4 team-page-bios">
             <div>
-              <img class="img-thumbnail img-responsive center-block" src="images/team/gordoozy.jpg" alt="...">
+              <img class="img-thumbnail img-responsive center-block" src="images/team/kevin.jpg" alt="...">
               <div class="caption text-center">
                 <h4 class="blue">Kevin Hou<br />
                 <span class="text-muted">tech associate</span></h4>
                 <hr class="team-page-thumbs" />
-                <p>Gordy learned to appreciate sneakers when he was in elementary school and had to wear a uniform. What he wore on his feet became a creative outlet. He has traded in sneakers since sixth grade and started Calikix, a shoe customizing business, after 8th grade, with clients that include Royal Respect. When he’s not getting out the good word about HeatSwap, he produces music for Face Jam with fellow HeatSwapper Jon Anderson. What he looks for in a sneaker: authenticity.</p>
+                <p>Kevin began programming in middle school, creating games and apps for his computer. In high school, he continued to program in his free time, creating music visualizers and other apps. Being a basketball player, Kevin grew up surrounded by sneaker culture and Heatswap provided a perfect balance of his two interests.</p>
               </div><!-- /caption -->
             </div><!-- /thumbnail -->
           </div><!-- /col-sm-6 -->         
