--- a/query.html
+++ b/query.html
@@ -444,7 +444,6 @@
           
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="contactDashboard.html?filter=submit">submit</a></li>
               <li><a href="contactDashboard.html?filter=faq">faq</a></li>
               <li><a href="contactDashboard.html?filter=buying">buying</a></li>
               <li><a href="contactDashboard.html?filter=selling">selling</a></li>
@@ -457,7 +456,7 @@
 
 
         <div>
-          <h1 id="filterName" >filter</h1>
+          <h1 id="questionName" >filter</h1>
 
           <div id="threads">
 
@@ -482,78 +481,28 @@
             urlParams[decode(match[1])] = decode(match[2]);
         })();
 
-        var holdUsing = urlParams["filter"];
-        document.getElementById("filterName").innerHTML=holdUsing;
+        var holdUsing = urlParams["question"];
+        // document.getElementById("filterName").innerHTML=holdUsing;
 
-        if (holdUsing != "submit") //If not on the submit page running this code
-        {
-          var contact = Parse.Object.extend("contact");
-          var query = new Parse.Query(contact);
-          query.equalTo("filter", holdUsing);
-          query.find({
-            success: function(results) {
-              // Do something with the returned Parse.Object values
-              var finalObj = "";
-              for (var i = 0; i < results.length; i++) { 
-                finalObj += "<div class='thread'>";
-                finalObj += "<h4><a href='query.html?question=" + results[i].id + "'>" + results[i].get("subject") + "</a></h4>";
-                finalObj += "<p>" + results[i].get("details") + "</p>";
-                finalObj += "</div>";
-              }
-              document.getElementById("threads").innerHTML=finalObj;
-            },
-            error: function(error) {
-              alert("Error: " + error.code + " " + error.message);
+        var contact = Parse.Object.extend("contact");
+        var query = new Parse.Query(contact);
+        query.equalTo("objectId", holdUsing);
+        query.find({
+          success: function(results) {
+            document.getElementById("questionName").innerHTML=results[0].get("subject")
+            // Do something with the returned Parse.Object values
+            var finalObj = "";
+            for (var i = 0; i < results.length; i++) { 
+              finalObj += "<div class='thread'>";
+              finalObj += "<p>" + results[i].get("details") + "</p>";
+              finalObj += "</div>";
             }
-          });
-        }
-        else if (holdUsing == "submit")
-        {
-          var finalObj = "<div class='queryInput'><input type='text' id='tempName' placeholder='name'></div>"; //Name input field
-          finalObj += "<div class='queryInput'><input type='text' id='tempSubject' placeholder='subject'></div>"; //Subject input field
-          finalObj += "<div class='queryInput'><input type='text' id='tempEmail' placeholder='email'></div>"; //Subject input field
-          finalObj += "<div class='queryInput'><textarea placeholder='question' type='text' id='tempQuestion' rows=5 cols=150> </textarea></div>"; //Subject input field
-          finalObj += "<div class='queryInput'><button id='submitQuery' class='btn btn-primary' onClick='submitQuestion()'>submit</button></div>"; //Submit button
-          document.getElementById("threads").innerHTML=finalObj;
-        }
-
-        var submitQuestion=function()
-        {
-          if (document.getElementById("tempName").value != "" & document.getElementById("tempSubject").value != "" & document.getElementById("tempQuestion").value != "" & document.getElementById("tempEmail").value != "")
-          {
-            // Simple syntax to create a new subclass of Parse.Object.
-            var Contact = Parse.Object.extend("contact");
-             
-            // Create a new instance of that class.
-            var contact = new Contact();
-            contact.set("details", document.getElementById("tempQuestion").value) //Set details
-            contact.set("name", document.getElementById("tempName").value) //Set name
-            contact.set("subject", document.getElementById("tempSubject").value) //Set subject
-            contact.set("email", document.getElementById("tempEmail").value) //Set email
-            contact.set("resolved", false) //Set resolved to false
-
-            contact.save(null,
-            {
-              success: function(contact)
-              {
-              // Execute any logic that should take place after the object is saved.
-              // alert('New object created with objectId: ' + contact.id); //Feedback
-              window.location.href="query.html?question=" + contact.id;
-              },
-              error: function(contact, error)
-              {
-              // Execute any logic that should take place if the save fails.
-              // error is a Parse.Error with an error code and message.
-              alert('Failed to create new object, with error code: ' + error.message);
-              }
-            });
+            document.getElementById("threads").innerHTML=finalObj;
+          },
+          error: function(error) {
+            alert("Error: " + error.code + " " + error.message);
           }
-          else
-          {
-            alert(document.getElementById("tempSubject").value);
-            alert("Please fill out all fields");
-          }
-        }
+        });
       </script>
 
 
