Changed Maddy's role

--- a/team.html
+++ b/team.html
@@ -497,7 +497,7 @@
               <img class="img-thumbnail img-responsive center-block" src="images/team/MaddyL.jpg" alt="...">
               <div class="caption text-center">
                 <h4 class="blue">Maddy Leibovitch<br />
-                <span class="text-muted">design associate</span></h4>
+                <span class="text-muted">twitter hound</span></h4>
                 <hr class="team-page-thumbs" />
                 <p>Maddy L. was 12 when she created her first website but her lifelong passion is art and design. HeatSwap is the perfect opportunity to merge her two interests in the creation of a rad site that combines both function and form. When she’s not working on the site, you can find Maddy thrift-shopping and reviewing best spots to eat great food in the Bay Area. Favorite pair of shoes: Kobe 5 Think Pink</p>
               </div><!-- /caption -->
