--- a/team.html
+++ b/team.html
@@ -522,7 +522,7 @@
                 <h4 class="blue">Kevin Hou<br />
                 <span class="text-muted">tech associate</span></h4>
                 <hr class="team-page-thumbs" />
-                <p>Kevin began programming in middle school, creating games and apps for his computer. In high school, he continued to program in his free time, creating music visualizers and other apps. Being a basketball player, Kevin grew up surrounded by sneaker culture and Heatswap provided a perfect balance of his two interests.</p>
+                <p>Kevin first started programming when he was 8 playing with Lego robotics. He has programmed a number of apps including a Handwriting Font App and Music Visualizer. Heatswap is the perfect opportunity for Kevin to apply his knowledge of programming to the real world and work for something that would impact others. When he's not coding for Heatswap, he is busy playing basketball and woodworking. Favorite pair of shoes: Air Jordan 5 Bin 23.</p>
               </div><!-- /caption -->
             </div><!-- /thumbnail -->
           </div><!-- /col-sm-6 -->         
