Small Change to Instagram

--- a/index.html
+++ b/index.html
@@ -425,26 +425,8 @@
         </div><!--/.container-fluid -->
       </div>
       <div id="main-wrap"><!-- Main content wrapper -->
-
-<<<<<<< Updated upstream
-=======
-        <div id="instafeed"></div>
-
-        <script type="text/javascript"> //Instagram feed
-          var feed = new Instafeed({
-              get: 'tagged',
-              tagName: 'heatswap',
-              useHTTP: true,
-              clientId: '6db2ad6073a042d5ad146ab4e340d579',
-              limit: 1,
-              resolution: 'standard_resolution'
-
-
-          });
-          feed.run();
-        </script>
         
->>>>>>> Stashed changes
+<!-- >>>>>>> Stashed changes -->
         <div id="tagline" class="page-header hidden-xs">
           <h1>Cop Heat. <span>Swap Heat.</span> Be Authentic.</h1>
         </div>
@@ -1105,7 +1087,7 @@ Parse.initialize("Ycnw3xJDv5iT8avNOo54rTM0kuTJpNMMwsMs4iIP", "qYnG7XTl8iSLu9M5iP
             useHttp: true,
             get: 'tagged',
             tagName: 'heatswap',
-            limit: 8,
+            limit: 4,
             after: function () {
               var images = $("#instafeed").find('a');
               $.each(images, function(index, image) {
